--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,10 @@ jobs:
       fail-fast: false
       matrix:
         php-version:
-          - '5.6'
-          - '7.0'
-          - '7.1'
-          - '7.2'
-          - '7.3'
           - '7.4'
+          - '8.0'
+          - '8.1'
+
     name: CI workflow on PHP ${{ matrix.php-version }}
     steps:
       - uses: actions/checkout@v2
@@ -40,8 +38,7 @@ jobs:
             ${{ runner.os }}-composer-
 
       - name: Install dependencies
-        run: |
-          composer install --prefer-dist
+        run: composer install --prefer-dist
 
       - name: Run tests
         run: composer run test
