--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         ]
     },
     "require": {
-        "php": ">=5.6",
-        "guzzlehttp/guzzle": "^6.2|^7.0"
+        "php": ">=7.4",
+        "guzzlehttp/guzzle": "^7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^9.4",
         "squizlabs/php_codesniffer": "^2.8"
     },
     "autoload": {
@@ -25,7 +25,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "SanityTest\\": "tests/"
+            "Sanity\\": "tests/"
         }
     },
     "license": "MIT",
