--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4",
-        "squizlabs/php_codesniffer": "^2.8"
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "psr-4": {
@@ -34,5 +34,8 @@
             "name": "Sanity.io",
             "email": "hello@sanity.io"
         }
-    ]
+    ],
+    "config": {
+        "sort-packages": true
+    }
 }
