Remove 8.1 for now as this causes some dependency issues
Also require ext-json in composer.json, and dump some PHP version info in the workflow for debugging purposes.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,6 @@ jobs:
         php-version:
           - '7.4'
           - '8.0'
-          - '8.1'
 
     name: CI workflow on PHP ${{ matrix.php-version }}
     steps:
@@ -19,6 +18,12 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
+
+      - name: Debug PHP installation
+        run: |
+          composer --version
+          php --version
+          php --modules
 
       - name: Validate composer files
         run: composer validate --strict
