--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     },
     "require": {
         "php": ">=7.4",
+        "ext-json": "*",
         "guzzlehttp/guzzle": "^7.2"
     },
     "require-dev": {
