--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,10 @@
     "description": "PHP library for the Sanity API",
     "type": "library",
     "scripts": {
-        "cs": "vendor/bin/phpcs src",
+        "cs": "vendor/bin/php-cs-fixer fix",
         "phpunit": "vendor/bin/phpunit",
         "test": [
-            "@phpunit",
-            "@cs"
+            "@phpunit"
         ]
     },
     "require": {
@@ -16,8 +15,8 @@
         "guzzlehttp/guzzle": "^7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.4",
-        "squizlabs/php_codesniffer": "^3.5"
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "phpunit/phpunit": "^9.4"
     },
     "autoload": {
         "psr-4": {
