--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,7 @@
     "description": "PHP library for the Sanity API",
     "type": "library",
     "scripts": {
-        "cs": "vendor/bin/php-cs-fixer fix",
-        "phpunit": "vendor/bin/phpunit",
-        "test": [
-            "@phpunit"
-        ]
+        "test": "vendor/bin/phpunit"
     },
     "require": {
         "php": ">=7.4",
@@ -15,7 +11,6 @@
         "guzzlehttp/guzzle": "^7.2"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16",
         "phpunit/phpunit": "^9.4"
     },
     "autoload": {
