--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
+          tools: php-cs-fixer
 
       - name: Debug PHP installation
         run: |
@@ -47,3 +48,7 @@ jobs:
 
       - name: Run tests
         run: composer run test
+
+      - name: Run php-cs-fixer
+        run: php-cs-fixer fix --dry-run --diff --diff-format udiff
+
