--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,5 +50,5 @@ jobs:
         run: composer run test
 
       - name: Run php-cs-fixer
-        run: php-cs-fixer fix --dry-run --diff --diff-format udiff
+        run: PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix --dry-run --diff --diff-format udiff
 
