--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -22,6 +22,7 @@ return (new PhpCsFixer\Config('Sanity'))
         ],
         'declare_strict_types' => true,
         'trailing_comma_in_multiline_array' => true,
+        'array_indentation' => true,
     ])
     ->setFinder((new Symfony\Component\Finder\Finder())
         ->files()
