--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -23,6 +23,9 @@ return (new PhpCsFixer\Config('Sanity'))
         'declare_strict_types' => true,
         'trailing_comma_in_multiline_array' => true,
         'array_indentation' => true,
+        'array_syntax' => [
+            'syntax' => 'short',
+        ],
     ])
     ->setFinder((new Symfony\Component\Finder\Finder())
         ->files()
