--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -26,6 +26,7 @@ return (new PhpCsFixer\Config('Sanity'))
         'array_syntax' => [
             'syntax' => 'short',
         ],
+        'compact_nullable_typehint' => true,
     ])
     ->setFinder((new Symfony\Component\Finder\Finder())
         ->files()
